keycloak.tf
locals {
  # get these values from either input variables, or internal resources if the variables weren't passed
  keycloak_image_url        = var.ecr_keycloak_image_url == null ? join("", aws_ecr_repository.keycloak-image-repository.*.repository_url) : var.ecr_keycloak_image_url
  keycloak_ecs_cluster_name = var.ecs_cluster_name == null ? "keycloak-${var.environment}-cluster" : var.ecs_cluster_name
  keycloak_ecs_cluster_arn  = var.ecs_cluster_name == null ? join("", aws_ecs_cluster.keycloak-cluster.*.arn) : join("", data.aws_ecs_cluster.keycloak-cluster.*.arn)
  keycloak_task_cpu         = 1024
  keycloak_task_memory      = 4096
  keycloak_java_memory      = local.keycloak_task_memory - 500
  admin_hostname            = var.admin_hostname == null ? var.hostname : var.admin_hostname
}

data "aws_ecs_cluster" "keycloak-cluster" {
  count = var.ecs_cluster_name != null ? 1 : 0

  cluster_name = var.ecs_cluster_name
}

resource "aws_ecs_cluster" "keycloak-cluster" {
  # only create this resource if ecs_cluster_arn is null
  count = var.ecs_cluster_name == null ? 1 : 0

  name = local.keycloak_ecs_cluster_name

  setting {
    name  = "containerInsights"
    value = "enabled"
  }

  tags = var.tags
}

resource "aws_security_group" "keycloak-sg" {
  vpc_id      = var.vpc_id
  name_prefix = "keycloak-${var.environment}-sg-"
  description = "Security group for Keycloak tasks"

  # checkov:skip=CKV_AWS_382:tasks need to access the internet (TODO)

  ingress {
    description     = "Allow incoming requests from the loadbalancer"
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    security_groups = [aws_security_group.keycloak-load-balancer-sg.id]
  }

  # https://www.keycloak.org/server/caching#network-ports
  ingress {
    description = "allow communication for distributed caching using Infinispan + jdbc-ping"
    from_port   = 7800
    to_port     = 7800
    protocol    = "tcp"
    self        = true
  }

  ingress {
    description = "allow failure detection for distributed caching using Infinispan + jdbc-ping"
    from_port   = 57800
    to_port     = 57800
    protocol    = "tcp"
    self        = true
  }

  egress {
    description      = "Allow external traffic to the internet"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = merge(var.tags, {
    Name = "keycloak-${var.environment}-sg"
  })

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_ecs_task_definition" "keycloak-ecs-taskdef" {
  family = "keycloak-${var.environment}-template"

  container_definitions = <<DEFINITION
  [
    {
      "name": "keycloak-${var.environment}",
      "image": "${local.keycloak_image_url}:${var.ecr_keycloak_image_tag}",
      "entryPoint": ${jsonencode(var.ecr_keycloak_image_entrypoint)},
      "environment": [
        {"name":"KEYCLOAK_ADMIN", "value":"${var.kc_username}"},
        {"name":"KC_DB", "value":"mariadb"},
        {"name":"KC_DB_URL_HOST", "value":"${aws_db_instance.keycloak-database-engine.endpoint}"},
        {"name":"KC_DB_URL_DATABASE", "value":"${var.db_name}"},
        {"name":"KC_DB_URL_PROPERTIES", "value":"?autoReconnect=true&sslMode=trust"},
        {"name":"KC_DB_USERNAME", "value":"${var.db_username}"},
        {"name":"KC_HTTP_RELATIVE_PATH", "value":"/auth"},
        {"name":"KC_HOSTNAME", "value": "https://${var.hostname}/auth"},
        {"name":"KC_HOSTNAME_ADMIN", "value":"https://${local.admin_hostname}/auth"},
        {"name":"KC_HOSTNAME_STRICT", "value":"true"},
        {"name":"KC_HTTP_ENABLED", "value":"true"},
        {"name":"KC_LOG_LEVEL", "value":"INFO,cz.integsoft:DEBUG,org.infinispan:DEBUG,org.jgroups:DEBUG"},
        {"name":"KC_HEALTH_ENABLED", "value":"true"},
        {"name":"JAVA_OPTS_APPEND", "value":"-Xmx${local.keycloak_java_memory}m -DawsRegion=${var.aws_region} -DawsJmsQueues=${var.aws_jms_queues}"},
        {"name":"KC_PROXY_HEADERS", "value":"xforwarded"},
        {"name":"KC_SPI_STICKY_SESSION_ENCODER__INFINISPAN__SHOULD_ATTACH_ROUTE", "value": "false"},
        {"name":"QUARKUS_HTTP_ACCESS_LOG_ENABLED", "value":"${var.access_log_enabled}"},
        {"name":"QUARKUS_HTTP_ACCESS_LOG_PATTERN", "value":"%t [%%{i,X-Forwarded-For}, %h] %l (user:%u) - '%r' => %s (%b bytes) '%%{i,User-Agent}' (Referer '%%{i,Referer}') - [%I, %Dms]"},
        {"name":"QUARKUS_HTTP_ACCESS_LOG_CONSOLIDATE_REROUTED_REQUESTS", "value":"${var.access_log_consolidate}"},
        {"name":"QUARKUS_HTTP_RECORD_REQUEST_START_TIME", "value":"${var.access_log_record_start_time}"}
      ],
      "secrets": [
        {"name":"KEYCLOAK_ADMIN_PASSWORD", "valueFrom":"${aws_secretsmanager_secret.keycloak-admin-password.arn}"},
        {"name":"KC_DB_PASSWORD", "valueFrom":"${aws_secretsmanager_secret.keycloak-database-password.arn}"}
      ],
      "essential": true,
      "logConfiguration": ${local.log_configuration},
      "portMappings": [
        {
          "containerPort": 8080,
          "hostPort": 8080
        },
        {
          "containerPort": 7800,
          "hostPort": 7800
        },
        {
          "containerPort": 9000,
          "hostPort": 9000
        },
        {
          "containerPort": 57800,
          "hostPort": 57800
        }
      ],
      "cpu": ${local.keycloak_task_cpu},
      "memory": ${local.keycloak_task_memory},
      "networkMode": "awsvpc",
      "stopTimeout": 120,
      "healthCheck": {
              "retries": 3,
              "command": [
                  "CMD-SHELL",
                  "cat /proc/net/tcp6 | grep '00000000000000000000000000000000:1F90 00000000000000000000000000000000:0000' || exit 1"
              ],
              "timeout": 5,
              "interval": 30,
              "startPeriod": 30
       }
    }
  ]
  DEFINITION

  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  memory                   = local.keycloak_task_memory
  cpu                      = local.keycloak_task_cpu
  execution_role_arn       = aws_iam_role.keycloak_ecs_execution_role.arn
  task_role_arn            = aws_iam_role.keycloak_ecs_task_role.arn

  tags = var.tags

  lifecycle {
    create_before_destroy = true
  }
}

resource "aws_ecs_service" "keycloak-service" {
  name                 = "keycloak-${var.environment}"
  cluster              = local.keycloak_ecs_cluster_arn
  task_definition      = aws_ecs_task_definition.keycloak-ecs-taskdef.arn
  launch_type          = "FARGATE"
  scheduling_strategy  = "REPLICA"
  desired_count        = 2
  force_new_deployment = true

  deployment_configuration {
    strategy             = "BLUE_GREEN"
    bake_time_in_minutes = local.DEPLOYMENT_BAKETIME / 60
  }

  network_configuration {
    subnets          = var.private_subnets
    assign_public_ip = false
    security_groups = [
      aws_security_group.keycloak-sg.id,
      aws_security_group.keycloak-load-balancer-sg.id
    ]
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.keycloak-target-group.arn
    container_name   = "keycloak-${var.environment}"
    container_port   = 8080

    advanced_configuration {
      alternate_target_group_arn = aws_lb_target_group.keycloak-target-group-green.arn
      production_listener_rule   = aws_lb_listener_rule.deployment_listener_rule.arn
      role_arn                   = aws_iam_role.keycloak_ecs_alb_management_role.arn
    }
  }

  lifecycle {
    create_before_destroy = true
    ignore_changes = [
      desired_count,
      # =======================================================================================
      # The loadbalancer target group is dynamic based on deployment when utilizing Blue/Green deployments, so we need to ignore it
      # in terraform management, however because we are modifying existing services, the load balancer already exists and tf won't change it
      # We need to first manage the load-balancer in terraform before ignoring it after Blue/Green deployments are modified
      # =======================================================================================
      # load_balancer,
      task_definition,
    ]
  }

  tags = var.tags

  depends_on = [
    aws_lb_listener.keycloak-listener,
    aws_iam_role.keycloak_ecs_execution_role,
    aws_iam_role.keycloak_ecs_task_role,
    aws_db_instance.keycloak-database-engine,
  ]
}
